# Generated by Django 5.2.13 on 2026-05-06 14:25

import django.core.validators
import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ("website", "0273_issue_spam_reason_issue_spam_score"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="Report",
            fields=[
                (
                    "vuln_id",
                    models.CharField(
                        help_text="自定义漏洞编号，如 SEC-2026-0001", max_length=50, primary_key=True, serialize=False
                    ),
                ),
                ("title", models.CharField(help_text="漏洞标题", max_length=255)),
                ("description", models.TextField(help_text="漏洞详细描述")),
                (
                    "severity",
                    models.CharField(
                        choices=[("critical", "严重"), ("high", "高危"), ("medium", "中危"), ("low", "低危")],
                        default="medium",
                        help_text="漏洞危害等级",
                        max_length=20,
                    ),
                ),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("pending", "待分派"),
                            ("processing", "处理中"),
                            ("fixed", "已修复"),
                            ("reviewing", "已复核"),
                            ("closed", "已关闭"),
                        ],
                        default="pending",
                        help_text="漏洞当前状态",
                        max_length=20,
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True, help_text="上报时间")),
                ("updated_at", models.DateTimeField(auto_now=True, help_text="最后更新时间")),
                (
                    "assignee",
                    models.ForeignKey(
                        blank=True,
                        help_text="当前处理人",
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="secguard_assigned",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
                (
                    "project",
                    models.ForeignKey(
                        help_text="所属项目",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="secguard_reports",
                        to="website.project",
                    ),
                ),
                (
                    "reporter",
                    models.ForeignKey(
                        help_text="漏洞上报人",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="secguard_reported",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "verbose_name": "漏洞报告",
                "verbose_name_plural": "漏洞报告",
                "ordering": ["-created_at"],
            },
        ),
        migrations.CreateModel(
            name="ScanTask",
            fields=[
                ("id", models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("name", models.CharField(help_text="任务名称", max_length=255)),
                ("target", models.CharField(help_text="扫描目标 (IP/域名)", max_length=255)),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("pending", "排队中"),
                            ("running", "运行中"),
                            ("finished", "已完成"),
                            ("failed", "失败"),
                        ],
                        default="pending",
                        help_text="扫描器运行状态",
                        max_length=20,
                    ),
                ),
                (
                    "progress",
                    models.IntegerField(
                        default=0,
                        help_text="扫描进度百分比 (0-100)",
                        validators=[
                            django.core.validators.MinValueValidator(0),
                            django.core.validators.MaxValueValidator(100),
                        ],
                    ),
                ),
                ("scanner_type", models.CharField(default="nettacker", help_text="扫描器类型", max_length=50)),
                ("started_at", models.DateTimeField(auto_now_add=True, help_text="任务创建时间")),
                ("finished_at", models.DateTimeField(blank=True, help_text="扫描结束时间", null=True)),
                (
                    "created_by",
                    models.ForeignKey(
                        help_text="任务发起人",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="secguard_scan_tasks",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "verbose_name": "扫描任务",
                "verbose_name_plural": "扫描任务",
                "ordering": ["-started_at"],
            },
        ),
        migrations.CreateModel(
            name="Vulnerability",
            fields=[
                ("id", models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("cve_id", models.CharField(blank=True, help_text="CVE 编号", max_length=50, null=True)),
                ("title", models.CharField(help_text="漏洞名称", max_length=255)),
                ("description", models.TextField(help_text="原始扫描描述 / Payload")),
                ("solution", models.TextField(blank=True, default="", help_text="修复建议")),
                ("severity", models.CharField(help_text="危害等级", max_length=20)),
                ("discovered_at", models.DateTimeField(auto_now_add=True, help_text="发现时间")),
                (
                    "report",
                    models.OneToOneField(
                        blank=True,
                        help_text="关联的人工漏洞报告工单（确认后转入修复流程）",
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="source_vulnerability",
                        to="website.report",
                    ),
                ),
                (
                    "scan_task",
                    models.ForeignKey(
                        help_text="所属扫描任务",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="vulnerabilities",
                        to="website.scantask",
                    ),
                ),
            ],
            options={
                "verbose_name": "扫描漏洞",
                "verbose_name_plural": "扫描漏洞",
                "ordering": ["-discovered_at"],
            },
        ),
        migrations.CreateModel(
            name="AuditLog",
            fields=[
                ("id", models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("action", models.CharField(help_text="操作类型", max_length=50)),
                ("target_type", models.CharField(help_text="目标类型 (如 Report, ScanTask)", max_length=50)),
                ("target_id", models.CharField(help_text="目标对象的主键 ID", max_length=50)),
                ("detail", models.TextField(blank=True, default="", help_text="操作详情/备注")),
                ("ip_address", models.GenericIPAddressField(blank=True, help_text="操作 IP 地址", null=True)),
                ("timestamp", models.DateTimeField(auto_now_add=True, help_text="操作时间")),
                (
                    "user",
                    models.ForeignKey(
                        help_text="操作人",
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="secguard_audit_logs",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "verbose_name": "审计日志",
                "verbose_name_plural": "审计日志",
                "ordering": ["-timestamp"],
                "indexes": [
                    models.Index(fields=["target_type", "target_id"], name="auditlog_target_idx"),
                    models.Index(fields=["-timestamp"], name="auditlog_time_idx"),
                ],
            },
        ),
        migrations.AddIndex(
            model_name="report",
            index=models.Index(fields=["status"], name="report_status_idx"),
        ),
        migrations.AddIndex(
            model_name="report",
            index=models.Index(fields=["severity"], name="report_severity_idx"),
        ),
        migrations.AddIndex(
            model_name="report",
            index=models.Index(fields=["assignee"], name="report_assignee_idx"),
        ),
        migrations.AddIndex(
            model_name="report",
            index=models.Index(fields=["-created_at"], name="report_created_idx"),
        ),
        migrations.AddIndex(
            model_name="scantask",
            index=models.Index(fields=["status"], name="scantask_status_idx"),
        ),
        migrations.AddIndex(
            model_name="scantask",
            index=models.Index(fields=["-started_at"], name="scantask_started_idx"),
        ),
        migrations.AddIndex(
            model_name="vulnerability",
            index=models.Index(fields=["cve_id"], name="vuln_cve_id_idx"),
        ),
        migrations.AddIndex(
            model_name="vulnerability",
            index=models.Index(fields=["severity"], name="vuln_severity_idx"),
        ),
    ]
